--- a/api-private-bank-reconciliation/package.json
+++ b/api-private-bank-reconciliation/package.json
@@ -22,11 +22,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@hapi/joi": "^17.1.1",
+    "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/microservices": "^8.4.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
+    "@types/hapi__joi": "^17.1.8",
     "amqp-connection-manager": "^4.1.1",
     "amqplib": "^0.8.0",
     "class-transformer": "^0.5.1",
