--- a/api-public-bank-reconciliation/package.json
+++ b/api-public-bank-reconciliation/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@hapi/joi": "^17.1.1",
+    "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/microservices": "^8.4.0",
     "@nestjs/platform-express": "^8.0.0",
