--- a/api-public-bank-reconciliation/.env.local
+++ b/api-public-bank-reconciliation/.env.local
@@ -1,2 +1,9 @@
 NODE_ENV = local
 LIMIT_NUMBER= 500
+RABBITMQ_URL= amqp://localhost
+RABBITMQ_PORT= 5672
+DB_HOST= localhost
+DB_PORT= 3306
+DB_USER= user
+DB_PASSWORD= secret
+DB_NAME= bank_reconciliation
