--- a/api-public-bank-reconciliation/package.json
+++ b/api-public-bank-reconciliation/package.json
@@ -21,19 +21,22 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
     "@hapi/joi": "^17.1.1",
+    "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/microservices": "^8.4.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.0",
+    "@nestjs/typeorm": "^8.0.3",
     "amqp-connection-manager": "^4.1.1",
     "amqplib": "^0.8.0",
+    "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.3.0",
+    "typeorm": "^0.2.45",
     "xlsx": "^0.18.3"
   },
   "devDependencies": {
