--- a/api-public-bank-reconciliation/.env.local
+++ b/api-public-bank-reconciliation/.env.local
@@ -7,3 +7,6 @@ DB_PORT= 3306
 DB_USER= user
 DB_PASSWORD= secret
 DB_NAME= bank_reconciliation
+SALT_OR_ROUNDS= 10
+JWT_SECRET= SECRET
+MINUTE_EXPIRES= 5
