update unit test controller

--- a/api-private-bank-reconciliation/.env.local
+++ b/api-private-bank-reconciliation/.env.local
@@ -1,8 +1,8 @@
 NODE_ENV = local
-DB_HOST= localhost
+DB_HOST= bank_reconciliation_db
 DB_PORT= 3306
 DB_USER= user
 DB_PASSWORD= secret
 DB_NAME= bank_reconciliation
-RABBITMQ_URL= amqp://localhost
+RABBITMQ_URL= amqp://rabbitmq
 RABBITMQ_PORT= 5672
