--- a/api-public-bank-reconciliation/.env.local
+++ b/api-public-bank-reconciliation/.env.local
@@ -1,8 +1,8 @@
 NODE_ENV = local
 LIMIT_NUMBER= 500
-RABBITMQ_URL= amqp://localhost
+RABBITMQ_URL= amqp://rabbitmq
 RABBITMQ_PORT= 5672
-DB_HOST= localhost
+DB_HOST= bank_reconciliation_db
 DB_PORT= 3306
 DB_USER= user
 DB_PASSWORD= secret
