--- a/api-public-bank-reconciliation/Dockerfile
+++ b/api-public-bank-reconciliation/Dockerfile
@@ -8,6 +8,13 @@ COPY package*.json ./
 
 RUN npm install
 
+# uninstall the current bcrypt modules
+RUN npm uninstall bcrypt
+
+# install the bcrypt modules for the machine
+RUN npm install bcrypt
+
+
 COPY . /home/app
 
 RUN npm run build
